# ACR

./: .gitignore  README.md
Concepts/: chroma.py  novelty_functions.py  onset_detection.py  peak_picking.py  spectral_features.py  stft.py
InterestingProjects/ACRCloud/acrcloud_extr_tools/: show_files.py  test.py  test2.py  test3.py  test4.py  upload_file.py
InterestingProjects/Olaf/: test1.rb  testing.sh
InterestingProjects/Olaf/eval/: olaf_evaluation.rb
InterestingProjects/audioscout/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
InterestingProjects/audioscout/clients/: Makefile  auscoutclient  cmake_install.cmake
InterestingProjects/audioscout/libs/: Makefile  audioindex  cmake_install.cmake  pHashAudioConfig.h
InterestingProjects/audioscout/libs/table-4.3.0phmodified/: Makefile  TableConfig.h  cmake_install.cmake  table_t  table_util
InterestingProjects/audioscout/servers/: Makefile  auscoutd  cmake_install.cmake  metadatadb  tblservd
InterestingProjects/audioscout/tests/: Makefile  RetrieveClient  TestAudioData  TestAudioHash  TestIndex  auscoutdriver  auscoutsink  cmake_install.cmake  mdriver  tbldriver  testmerge  testserialize
InterestingProjects/dejavu/: example_docker_postgres.py  example_script.py  run_tests.py  test_dejavu.sh
InterestingProjects/dejavu/dejavu/tests/: dejavu_test.py
InterestingProjects/songprint-1.2/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  acconfig.h  aclocal.m4  confdefs.h  config.cache  config.h.in  configure  configure.in  mkinstalldirs
InterestingProjects/songprint-1.2/Win32/: Makefile.am  Makefile.in  config.h  sp_sdk_dll.dsp  sp_sdk_lib.dsp
InterestingProjects/songprint-1.2/Win32/GUI/: DirectoryTree.cpp  DirectoryTree.h  Makefile.am  Makefile.in  SSDAddSongsThread.cpp  SSDAddSongsThread.h  SSDDirChooserDialog.cpp  SSDDirChooserDialog.h  SSDDocument.cpp  SSDDocument.h  SSDMainFrame.cpp  SSDMainFrame.h  SSDSongDataView.cpp  SSDSongDataView.h  SSDSongListView.cpp  SSDSongListView.h  SSDSongSigThread.cpp  SSDSongSigThread.h  SongSigDemo.cpp  SongSigDemo.dsp  SongSigDemo.dsw  SongSigDemo.h  SongSigDemo.rc  SongSigDemo.reg  StdAfx.cpp  StdAfx.h  mpg123codec.dsp  resource.h  vorbiscodec.dsp  wavcodec.dsp
InterestingProjects/songprint-1.2/Win32/GUI/RES/: Makefile.am  Makefile.in  SongSigDemo.rc2
InterestingProjects/songprint-1.2/example/: Makefile.am  Makefile.in  sp_example.c
InterestingProjects/songprint-1.2/macros/: Makefile.am  Makefile.in
InterestingProjects/songprint-1.2/src/: Makefile.am  Makefile.in  codecs.c  codecs.h  sig_tables.c  sig_tables.h  songprint.h  songprintfile.c  songprintfile.h  sp_id_t.c  sp_identify.c  sp_identify.h  sp_signature.c  sp_signature.h  sp_types.h
InterestingProjects/songprint-1.2/src/codecs/: Makefile.am  Makefile.in
InterestingProjects/songprint-1.2/src/codecs/mpg123/: Makefile.am  Makefile.in  common.c  decode_i386.c  interface.c  layer3.c  mp3.c  mp3.h  mpg123.h  mpg123_iface.c  mpg123_iface.h  mpglib.h  tabinit.c
InterestingProjects/songprint-1.2/src/codecs/vorbis/: Makefile.am  Makefile.in  vorbis_iface.c  vorbis_iface.h
InterestingProjects/songprint-1.2/src/codecs/vorbis/vorbis/: Makefile.am  Makefile.in  README  configure  configure.in
InterestingProjects/songprint-1.2/src/codecs/vorbis/vorbis/include/: Makefile.am  Makefile.in
InterestingProjects/songprint-1.2/src/codecs/vorbis/vorbis/include/vorbis/: Makefile.am  Makefile.in  backends.h  codebook.h  codec.h  internal.h  modes.h  os_types.h  vorbisfile.h
InterestingProjects/songprint-1.2/src/codecs/vorbis/vorbis/lib/: Makefile.am  Makefile.in  analysis.c  bitwise.c  bitwise.h  block.c  bookinternal.h  codebook.c  envelope.c  envelope.h  floor0.c  framing.c  iir.c  iir.h  info.c  lpc.c  lpc.h  lsp.c  lsp.h  mapping0.c  masking.h  mdct.c  mdct.h  misc.h  os.h  psy.c  psy.h  registry.c  registry.h  res0.c  scales.h  sharedbook.c  sharedbook.h  smallft.c  smallft.h  spectrum.h  synthesis.c  time0.c  vorbisfile.c  window.c  (+1 more)
InterestingProjects/songprint-1.2/src/codecs/wav/: Makefile.am  Makefile.in  wav.c  wav.h  wav_iface.c  wav_iface.h
Literature Review/: Literature Review Machine Learning.md
Results/Cloud/CloudModTest/: output_cloudMP.csv  output_cloudMPSimple.csv
Results/Cloud/CloudTimeTest/: output_cloudT.csv  output_cloudTSimple.csv
Results/Dejavu/DejavuModTest/: DejavuModTest.txt
Results/Dejavu/DejavuTimeTest/: DejavuLogTotal(1).txt  DejavuLogTotal.txt
Results/Olaf/: output_simple.txt
