SUBDIRS = RES
EXTRA_DIST = \
DirectoryTree.cpp \
DirectoryTree.h \
SSDAddSongsThread.cpp \
SSDAddSongsThread.h \
SSDDirChooserDialog.cpp \
SSDDirChooserDialog.h \
SSDDocument.cpp \
SSDDocument.h \
SSDMainFrame.cpp \
SSDMainFrame.h \
SSDSongDataView.cpp \
SSDSongDataView.h \
SSDSongListView.cpp \
SSDSongListView.h \
SSDSongSigThread.cpp \
SSDSongSigThread.h \
SongSigDemo.cpp \
SongSigDemo.dsp \
SongSigDemo.dsw \
SongSigDemo.h \
SongSigDemo.rc \
SongSigDemo.reg \
StdAfx.cpp \
StdAfx.h \
mpg123codec.dsp \
resource.h \
vorbiscodec.dsp \
wavcodec.dsp

